한바퀴연습 (Popup.js)

--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -76,6 +76,12 @@
             }
         }
     }
+    .popup {
+        float: right;
+        padding: 6px 20px;
+        font-weight: bold;
+        cursor: pointer;
+    }
 
     .gnb {
         float: right;
