메인 페이지 마크업

--- a/src/scss/base/_common.scss
+++ b/src/scss/base/_common.scss
@@ -49,3 +49,8 @@ body,html,#root{height:100%;}
   -ms-user-select: none;
   user-select: none;
 }
+
+.form-control {
+  border: transparent;
+  background: transparent;
+}
