메인 헤더 마크업

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -33,10 +33,10 @@ img{vertical-align:top;max-width:100%;}
 
 a{background:transparent;color:#333;text-decoration:none;&:focus, &:hover, &:active{text-decoration:none;outline:0;}}
 
-::-webkit-input-placeholder{color:#bbb;}
-:-moz-placeholder{color:#bbb;}
-::-moz-placeholder{color:#bbb;}
-:-ms-input-placeholder{color:#bbb;}
+::-webkit-input-placeholder{color:#777;}
+:-moz-placeholder{color:#777;}
+::-moz-placeholder{color:#777;}
+:-ms-input-placeholder{color:#777;}
 
 *::selection{background:transparent;}
 *::-moz-selection{background:transparent;}
