--- a/src/scss/base/_common.scss
+++ b/src/scss/base/_common.scss
@@ -54,3 +54,12 @@ body,html,#root{height:100%;}
   border: transparent;
   background: transparent;
 }
+
+.container  {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.header-padding {
+  padding-top: 120px;
+}
