--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -1,108 +1,259 @@
 .Header {
     position: fixed;
     top: 0;
-    width: 100%;
+    left: 0;
+    right: 0;
     z-index: 1000;
-    height: 75px;
-    padding: 20px 40px;
     background: #fff;
-    .logo {
-        float: left;
-        white-space: nowrap;
-        width: 165px;
-        .icon-camera {
-            width: 34px;
-            float: left;
-            margin-right: 10px;
-        }
-        .name {
-            font-size: 16px;
-            font-weight: 500;
-        }
-        p {
-            font-size: 13px;
-            font-weight: 500;
-            line-height: 1.1;
-        }
+    .container {
+        display: flex;
+        align-items: center;
     }
-
-    .search-area {
-        background: #f5f6f7;
-        display: inline-block;
-        margin-left: 50px;
-        padding: 6px;
-        width: 500px;
-        margin-top: -5px;
-        -webkit-border-radius: 28px;
-        -moz-border-radius: 28px;
-        border-radius: 28px;
-        .input-group {
-            width: 100%;
-            display: flex;
-            label {
-                width: 40px;
-                display: flex;
-                justify-content: center;
-                .icon-search {
-                    width: 20px;
+    .top-header {
+        height: 75px;
+        .logo {
+            padding: 14px 20px;
+            a {
+                .icon-home {
                     svg {
-                        fill : #aaa
+                        width: 32px;
+                        height: 32px;
                     }
                 }
             }
-            .form-control {
-                width: 100%;
-                border: none;
-                padding: 4px 8px;
-            }
-        }
-        .btn-search {
-            color: #aaa;
-            width: 100px;
-            background: #fff;
-            border: 1px solid #e5e5e5;
-            padding-top: 5px;
-            -webkit-border-radius: 6px;
-            -moz-border-radius: 6px;
-            border-radius: 6px;
-            -webkit-transition:  .3s;
-            -moz-transition:  .3s;
-            -ms-transition:  .3s;
-            -o-transition:  .3s;
-            transition:  .3s;
-            &:hover {
-                color: #555;
-                border-color: #666;
-            }
-        }
-    }
 
-    .gnb {
-        float: right;
-        ul {
-            .nav-item {
-                float: left;
-                .nav-link {
-                    display: block;
-                    padding: 10px 20px;
-                    text-transform: capitalize;
-                    font-weight: 500;
-                    color: #333;
-                    font-size: 17px;
-                    .icon-Explore {
-                        .svg {
-                            width: 32px;
+            .icon-camera {
+                width: 34px;
+                margin-right: 10px;
+            }
+            .name {
+                font-size: 16px;
+                font-weight: 500;
+            }
+            p {
+                font-size: 13px;
+                font-weight: 500;
+                line-height: 1.1;
+            }
+        }
+
+        .search-area {
+            flex-grow: 1;
+            align-items: center;
+            background: #eee;
+            padding: 6px;
+            font-size: 14px;
+            height: 40px;
+            -webkit-border-radius: 20px;
+            -moz-border-radius: 20px;
+            border-radius: 20px;
+            .input-group {
+                width: 100%;
+                display: flex;
+                flex-grow: 1;
+                label {
+                    width: 40px;
+                    display: flex;
+                    justify-content: center;
+                    .icon-search {
+                        width: 20px;
+                        svg {
+                            fill : #aaa
+                        }
+                    }
+                }
+                .search-input {
+                    flex-grow: 1;
+                }
+            }
+            .btn-search {
+                color: #aaa;
+                width: 100px;
+                background: #fff;
+                border: 1px solid #e5e5e5;
+                padding-top: 5px;
+                -webkit-border-radius: 6px;
+                -moz-border-radius: 6px;
+                border-radius: 6px;
+                -webkit-transition:  .3s;
+                -moz-transition:  .3s;
+                -ms-transition:  .3s;
+                -o-transition:  .3s;
+                transition:  .3s;
+                &:hover {
+                    color: #555;
+                    border-color: #666;
+                }
+            }
+        }
+
+        .gnb {
+            display: flex;
+            align-items: center;
+            float-wrap: wrap;
+            margin-left: auto;
+            ul {
+                display: flex;
+
+                .nav-item {
+                    .nav-link {
+                        display: block;
+                        text-transform: capitalize;
+                        font-weight: 500;
+                        color: #999;
+                        font-size: 14px;
+                        height: 40px;
+                        line-height: 40px;
+                        padding: 0 10px;
+                        .icon-Explore {
+                            svg {
+                                padding-top: 10px;
+                                width: 20px;
+                                fill: #999;
+                            }
                         }
                     }
                 }
             }
+
+            .submit-photo {
+                font-weight: bold;
+                cursor: pointer;
+                color: #999;
+                font-size: 14px;
+                padding: 12px 11px 10px;
+                border: 1px solid #ddd;
+                -webkit-border-radius: 4px;
+                -moz-border-radius: 4px;
+                border-radius: 4px;
+            }
+
+            .notification {
+                .icon-notification {
+                    padding: 20px;
+                    svg {
+                        width: 20px;
+                        fill: #999;
+                    }
+                }
+            }
+
+            .collections {
+                padding: 20px 20px 20px 0;
+                img {
+                    width: 32px;
+                    -webkit-border-radius: 50%;
+                    -moz-border-radius: 50%;
+                    border-radius: 50%;
+                }
+            }
         }
     }
 
-    .Submit-photo {
-        float: right;
-        padding: 6px 20px;
+    .main-header {
+        ul {
+            overflow-x: auto;
+            height: 60px;
+            .main-header-link {
+                float: left;
+                line-height: 60px;
+                padding: 0 20px;
+            }
+        }
+    }
+
+
+}
+
+.DropExplore {
+    position: fixed;
+    top: 65px;
+    right: 125px;
+    background: #000;
+    color: #fff;
+    z-index: 1000;
+    width: 162px;
+    padding: 9px 16px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    &:before {
+        content:'';
+        position: absolute;
+        top: -6px;
+        width: 6px;
+        height: 4px;
+        border-bottom: 6px solid #000;
+        border-left: 6px solid #fff;
+        border-right: 6px solid #fff;
+    }
+    .drop-link {
+        margin: 5px 0;
+        line-height: 1.4;
+        a {
+            font-size: 13px;
+            color: #fff;
+            -webkit-transition:  .4s;
+            -moz-transition:  .4s;
+            -ms-transition:  .4s;
+            -o-transition:  .4s;
+            transition:  .4s;
+            &:hover {
+                opacity: .5;
+            }
+        }
+    }
+}
+
+.DropNotification {
+    position: fixed;
+    top: 65px;
+    right: 30px;
+    background: #fff;
+    color: #ddd;
+    z-index: 1000;
+    width: 330px;
+    border: 1px solid #ddd;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-transition:  .4s;
+    -moz-transition:  .4s;
+    -ms-transition:  .4s;
+    -o-transition:  .4s;
+    transition:  .4s;
+    &:hover {
+        border: 1px solid #999;
+        .drop-triangle {
+            border-color: #999;
+        }
+    }
+    .drop-triangle {
+        position: absolute;
+        top: -6px;
+        right: 45px;
+        width: 12px;
+        height: 12px;
+        background: #fff;
+        border-left: 1px solid #ddd;
+        border-top: 1px solid #ddd;
+        transform: rotate(45deg);
+        transform-origin: center;
+        transition: border-color .2s ease-in-out;
+    }
+    .head {
+        padding: 0 12px;
+        font-size: 11px;
         font-weight: bold;
-        cursor: pointer;
+        height: 40px;
+        line-height: 40px;
+        color: #999;
+        border-bottom: 1px solid #ddd;
+    }
+    .body {
+        padding: 20px;
+        text-align: center;
+        color: #999;
+        font-size: 15px;
     }
 }
