--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -92,6 +92,7 @@
             align-items: center;
             float-wrap: wrap;
             margin-left: auto;
+            padding: 0 36px;
             ul {
                 display: flex;
 
@@ -115,49 +116,119 @@
                     }
                 }
             }
+        }
+        .submit-photo {
+            font-weight: bold;
+            cursor: pointer;
+            color: #999;
+            font-size: 14px;
+            padding: 12px 11px 10px;
+            border: 1px solid #ddd;
+            -webkit-border-radius: 4px;
+            -moz-border-radius: 4px;
+            border-radius: 4px;
+        }
 
-            .submit-photo {
-                font-weight: bold;
-                cursor: pointer;
-                color: #999;
-                font-size: 14px;
-                padding: 12px 11px 10px;
-                border: 1px solid #ddd;
-                -webkit-border-radius: 4px;
-                -moz-border-radius: 4px;
-                border-radius: 4px;
-            }
-
-            .notification {
-                .icon-notification {
-                    padding: 20px;
-                    svg {
-                        width: 20px;
-                        fill: #999;
-                    }
+        .notification {
+            .icon-notification {
+                padding: 20px;
+                svg {
+                    width: 20px;
+                    fill: #999;
                 }
             }
+        }
 
-            .collections {
-                padding: 20px 20px 20px 0;
-                img {
-                    width: 32px;
-                    -webkit-border-radius: 50%;
-                    -moz-border-radius: 50%;
-                    border-radius: 50%;
-                }
+        .collections {
+            padding: 20px 20px 20px 0;
+            img {
+                width: 32px;
+                -webkit-border-radius: 50%;
+                -moz-border-radius: 50%;
+                border-radius: 50%;
             }
         }
     }
 
     .main-header {
-        ul {
-            overflow-x: auto;
-            height: 60px;
-            .main-header-link {
-                float: left;
-                line-height: 60px;
-                padding: 0 20px;
+        position: relative;
+        height: 60px;
+        .primary-head {
+            position: absolute;
+            top: 0;
+            left: 0;
+            background: #fff;
+            z-index: 1;
+
+            &:after {
+                content: '';
+                position: absolute;
+                top: 50%;
+                right: 0;
+                transform: translateY(-50%);
+                width: 1px;
+                height: 30px;
+                background: #999;
+                z-index: 1;
+            }
+            ul {
+                display: flex;
+                padding-left: 20px;
+                .main-header-item {
+                    line-height: 60px;
+                    .header-link {
+                        margin-right: 20px;
+                        font-size: 14px;
+                        color: #999;
+                        border: 2px solid transparent;
+                        &.on {
+                            color: #000;
+                            position: relative;
+                            &:before {
+                                content: '';
+                                position: absolute;
+                                top: calc(100% + 20px);
+                                left: 0;
+                                right: 0;
+                                background: #000;
+                                width: 100%;
+                                height: 2px;
+                                z-index: 1;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .secondary-head {
+            padding-left: 190px;
+            overflow-x: scroll;
+            white-space: nowrap;
+            ul {
+                display: flex;
+                .main-header-item {
+                    line-height: 60px;
+                    padding-right: 20px;
+                    .header-link {
+                        font-size: 14px;
+                        color: #999;border: 2px solid transparent;
+                        &.on {
+                            color: #000;
+                            position: relative;
+                            &:before {
+                                content: '';
+                                position: absolute;
+                                top: calc(100% + 20px);
+                                left: 0;
+                                right: 0;
+                                background: #000;
+                                width: 100%;
+                                height: 2px;
+                                z-index: 1;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
