메인 페이지 컴포넌트 구조화

--- a/src/pages/MainGallery.scss
+++ b/src/pages/MainGallery.scss
@@ -1,5 +1,7 @@
-.main-gallery {
+.MainGallery {
   margin: 50px 20px;
+  text-align: center;
+  color: #999;
   .MainGalleryItem {
     float: left;
     width: 33.33%;
